# private-spread

./: .gitignore  pyproject.toml
spread/: __main__.py  helpers.py  pushing.py  structures.py
