[tool.poetry]
name = "private-spread"
version = "0.1.0"
description = ""
authors = ["cyan <contact@cyans.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "0.12.5"
rtoml = "^0.11.0"
pydantic = "^2.9.2"
rich = "^13.9.2"
pydantic-settings = "^2.5.2"
paramiko = "^3.5.0"
fabric = "^3.2.2"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
